nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: mukul3062/myrepo3062:nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-storage
              mountPath: /var/www
      volumes:
        - name: nginx-storage
          emptyDir: {}
